<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超家伙（卖家版）</string>
    <string name="action_settings">设置</string>
    <string name="app_main">首页</string>
    
    <string name="search">搜索</string>
    <string name="edit">编辑</string>

    <string name="back">返回</string>
    <string name="cancel">取消</string>
    
    <string name="login">登录</string>
    <string name="qq_login">使用QQ登录</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>
    <string name="sale_register">卖家注册</string>
    
    <string name="mobile">手机号码</string>
    <string name="password">密码</string>
    
    <string name="shop_name">商家名称</string>
    <string name="shop_classify">商家类型</string>
    <string name="shop_address">商家地址</string>
    
</resources>
