<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffafafa"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.yuhen.saleapp.login.LoginActivity" >

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!-- 显示注册按钮和标题信息 -->
    <include
        android:id="@+id/login_main_head"
        layout="@layout/main_head" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/mobile_login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="36dip"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:textSize="12sp"
                android:text="13533714838"
                android:hint="@string/mobile"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="36dip"
                android:background="@drawable/bg_edittext"
                android:layout_marginBottom="10dip"
                android:textSize="12sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="testsaleapp"
                android:singleLine="true" />

            <Button
                android:id="@+id/mobile_sign_in_button"
                android:layout_width="200.0dip"
                android:layout_height="42.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12.0dip"
                android:layout_marginTop="12.0dip"
                android:background="@drawable/bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18.0dip"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>