<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!-- 显示注册按钮和标题信息 -->

    <include
        android:id="@+id/main_head"
        layout="@layout/main_head" />

    <ScrollView
        android:id="@+id/sv_register"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="36dip"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:textSize="12sp"
                android:hint="@string/mobile"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="36dip"
                android:background="@drawable/bg_edittext"
                android:layout_marginBottom="10dip"
                android:textSize="12sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_comfirm_password"
                android:layout_width="match_parent"
                android:layout_height="36dip"
                android:background="@drawable/bg_edittext"
                android:textSize="12sp"
                android:hint="@string/comfirm_password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="200.0dip"
                android:layout_height="42.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12.0dip"
                android:layout_marginTop="12.0dip"
                android:background="@drawable/bg"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18.0dip"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>