<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/shop_detail_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!-- 显示标题信息 -->

    <RelativeLayout
        android:id="@+id/shop_detail_title"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/bg" >

        <TextView
            android:id="@+id/shop_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8.0dip"
            android:gravity="center"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/back"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shop_detail_center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/shop_detail"
            android:textColor="#ffffffff"
            android:textSize="18.0dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_shop_detail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10.0dip" >
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5.0dip" >

                <TextView
                    android:id="@+id/tv_shop_classify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/shop_classify" />

                <Spinner android:id="@+id/s_shop_classify"
                    android:layout_width="match_parent"
                    android:layout_height="36dip"  
        			android:background="@drawable/bg_edittext"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5.0dip" >

                <TextView
                    android:id="@+id/tv_shop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/shop_name" />

                <EditText
                    android:id="@+id/et_shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="36dip"  
        			android:background="@drawable/bg_edittext" 
                    android:hint="@string/shop_name"
                    android:inputType="text" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="5.0dip" >

                <TextView
                    android:id="@+id/tv_adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/shop_address" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="36dip"  
        			android:background="@drawable/bg_edittext" 
                    android:hint="@string/shop_address"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_shop_detail"
                android:layout_width="200.0dip"
                android:layout_height="42.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12.0dip"
                android:layout_marginTop="12.0dip"
                android:background="@drawable/bg"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18.0dip"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_shop_detail_logout"
                android:layout_width="200.0dip"
                android:layout_height="42.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12.0dip"
                android:layout_marginTop="12.0dip"
                android:background="@drawable/bg"
                android:text="@string/shop_detail_logout"
                android:textColor="@color/white"
                android:textSize="18.0dip"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>